spacing repairs

--- a/main.css
+++ b/main.css
@@ -349,7 +349,6 @@ div.widthlimit {
 
 hr.spacer {
     margin: 50px;
-    padding: 10px;
 }
 
 div.widthlimit * {
